[package]
authors = ["Ceri Storey <ceri@lshift.net>"]
name = "tcpthing"
version = "0.1.0"

[dependencies]
env_logger = "0.3.5"
hdrsample = "2.1.1"
hyper = { version = "0.9.13", default-features = false }
log = "0.3.6"
lru_time_cache = "0.9.0"
pcap = "0.5.7"
pnet = "0.22.0"
prometheus = "0.2.6"
protobuf = "1.0.24"
time = "0.1.35"

[dependencies.hex-slice]
git = "https://github.com/cstorey/hex-slice"
optional = false
